syntax = "proto3";

package node;

// Request messages
message GetStatusRequest {}
message SetNodeInfoRequest {}
message GetNodeDetailsRequest {}

// Response messages
message GetStatusResponse {
    int64 wallet_block_count = 1;
    int64 local_daemon_block_count = 2;
    int64 network_block_count = 3;
    int64 peer_count = 4;
    int64 hashrate = 5;
    bool is_view_wallet = 6;
    int64 subwallet_count = 7;
}
message SetNodeInfoResponse {}
message GetNodeDetailsResponse {
    string daemon_host = 1;
    int32 daemon_port = 2;
    int64 node_fee = 3;
    string node_address = 4;
}

// Node service definition.
service Node {
    rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
    rpc SetNodeInfo(SetNodeInfoRequest) returns (SetNodeInfoResponse) {}
    rpc GetNodeDetails(GetNodeDetailsRequest) returns (GetNodeDetailsResponse) {}
}