syntax = "proto3";

package wallet;

// Request messages
message OpenWalletRequest {
  string daemon_host = 1;
  uint32 daemon_port = 2;
  string filename = 3;
  string password = 4;
}
message WalletImportKeyRequest {}
message WalletImportSeedRequest {}
message WalletImportViewRequest {}
message WalletCreateRequest {}
message SaveWalletRequest {}
message ResetWalletRequest {}
message CloseWalletRequest {}
message GetBalanceRequest {}
message GetBalanceForAddressRequest {}
message GetBalancesRequest {}
message GetPrivateViewKeyRequest {}
message GetSpendKeysRequest {}
message GetMnemonicSeedRequest {}
message GetTxPrivateKeyRequest {}

// Response messages
message OpenWalletResponse {
  enum Status {
    SUCCESS = 0;
    ERROR = 1;
  }
  
  Status status = 1;
  int32 http_status_code = 2;
}
message WalletImportKeyResponse {}
message WalletImportSeedResponse {}
message WalletImportViewResponse {}
message WalletCreateResponse {}
message SaveWalletResponse {}
message ResetWalletResponse {}
message CloseWalletResponse {}
message GetBalanceResponse {
  int64 unlocked = 1;
  int64 locked = 2;
}
message GetBalanceForAddressResponse {
  int64 unlocked = 1;
  int64 locked = 2;
}
message GetBalancesResponse {
  string address = 1;
  int64 unlocked = 2;
  int64 locked = 3;
}
message GetPrivateViewKeyResponse {
  string private_view_key = 1;
}
message GetSpendKeysResponse {
  string public_spend_key = 1;
  string private_spend_key = 2;
}
message GetMnemonicSeedResponse {
  string mnemonic_seed = 1;
}
message GetTxPrivateKeyResponse {
  int64 transaction_private_key = 1;
}

// Wallet service definition.
service Wallet {
  rpc OpenWallet (OpenWalletRequest) returns (OpenWalletResponse) {}
  rpc WalletImportKey (WalletImportKeyRequest) returns (WalletImportKeyResponse) {}
  rpc WalletImportSeed (WalletImportSeedRequest) returns (WalletImportSeedResponse) {}
  rpc WalletImportView (WalletImportViewRequest) returns (WalletImportViewResponse) {}
  rpc WalletCreate (WalletCreateRequest) returns (WalletCreateResponse) {}
  rpc SaveWallet (SaveWalletRequest) returns (SaveWalletResponse) {}
  rpc ResetWallet (ResetWalletRequest) returns (ResetWalletResponse) {}
  rpc CloseWallet (CloseWalletRequest) returns (CloseWalletResponse) {}
  rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse) {}
  rpc GetBalanceForAddress (GetBalanceForAddressRequest) returns (GetBalanceForAddressResponse) {}
  rpc GetBalances (GetBalancesRequest) returns (GetBalancesResponse) {}
  rpc GetPrivateViewKey (GetPrivateViewKeyRequest) returns (GetPrivateViewKeyResponse) {}
  rpc GetSpendKeys (GetSpendKeysRequest) returns (GetSpendKeysResponse) {}
  rpc GetMnemonicSeed (GetMnemonicSeedRequest) returns (GetMnemonicSeedResponse) {}
  rpc GetTxPrivateKey (GetTxPrivateKeyRequest) returns (GetTxPrivateKeyResponse) {}
}


